# RealtorAgentAI

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  AI_AGENT_SETUP.md  MASTER_TASK_LIST.md  Makefile  PHASE_15B_IMPLEMENTATION_PROGRESS.md  PHASE_15B_INTEGRATION_TEST_RESULTS.md  PHASE_15B_MANUAL_VERIFICATION_CHECKLIST.md  PHASE_15B_MOCK_DATA_AUDIT.md  PROJECT_STRUCTURE.md  README.md  RealEstate_MultiAgent_Spec.md  TASK_VERIFICATION_GUIDE.md  docker-compose.yml  requirements-dev.txt  test_chat.json  test_file.txt  test_server.py
backend/: .env.example  Dockerfile.dev  PHASE_15A_IMPLEMENTATION_SUMMARY.md  pyproject.toml  pytest.ini  pytest_ai_agents.ini  requirements.txt  run_ai_agent_tests.py  test_ai_agents.py  test_ai_endpoints.py  test_cors_fix.py  test_qwen_integration.py  test_startup_validation_manual.py
backend/alembic/: env.py
backend/alembic/versions/: 73c8d4e17048_initial_database_schema.py
backend/app/: __init__.py  agent_runtime.py  auth.py  config.py  main.py  worker.py  ws.py
backend/app/api/: __init__.py  admin.py  agent_orchestrator.py  auth.py  contracts.py  files.py  model_router.py  signatures.py  tasks.py  templates.py  webhooks.py
backend/app/core/: __init__.py  ai_agent_auth.py  ai_agent_errors.py  ai_agent_logging.py  auth.py  business_rules.py  celery_app.py  config.py  database.py  dependencies.py  document_processor.py  logging.py  notifications.py  output_generator.py  performance_monitor.py  redis_config.py  security.py  startup_validation.py  storage.py  task_retry.py  template_engine.py
backend/app/monitoring/: flower_config.py
backend/app/services/: admin_service.py  advanced_workflow_orchestrator.py  agent_celery_tasks.py  agent_memory.py  agent_orchestrator.py  contract_service.py  conversation_service.py  document_signing_service.py  enterprise_integration.py  file_service.py  model_router.py  (+7 more)
backend/docs/: PHASE_8_IMPLEMENTATION_SUMMARY.md  PHASE_9_IMPLEMENTATION_SUMMARY.md
backend/scripts/: run_seeding.py  seed_integration_data.py  simple_seed.py  start_flower.sh  start_workers.sh
backend/tests/: __init__.py  test_admin_api.py  test_admin_service.py  test_advanced_agents.py  test_agent_integration.py  test_agent_orchestrator.py  test_agent_tools.py  test_ai_agents_api.py  test_api_response_validation.py  test_auth.py  test_background_processing_integration.py  test_business_rules.py  test_config.py  test_contract_generation.py  test_contract_management.py  test_database.py  test_digital_signatures.py  test_document_processor.py  test_end_to_end_workflows.py  test_error_handling_debugging.py  test_file_management.py  test_health_endpoints_integration.py  test_integration.py  test_integration_coordination.py  test_llm_integration.py  test_main.py  test_model_router.py  test_models.py  test_performance.py  test_performance_optimization.py  test_rbac.py  test_relationships.py  test_runner_ai_agents.py  test_security.py  test_startup_validation.py  test_storage.py  test_task_api.py  test_task_service.py  test_template_management.py  test_websocket_communication.py  (+1 more)
(+133 files in other folders)
